packages/verta-protocol/fixtures/token/jws/invalid/AU-TOKEN-WRONGAUD-005.jwt
eyJ0eXAiOiJKV1QiLCJhbGciOiJFZERTQSIsImtpZCI6ImZpeHR1cmUtdG9rZW4ta2V5LTEifQ.eyJpc3MiOiJicmlkZ2UuZXhhbXBsZSIsImF1ZCI6InZlcnRhLWNsaWVudCIsInN1YiI6ImFjY3QtMSIsImp0aSI6Im5zLTE3NzUwMDIyMDAwMDAwMDAwMDAiLCJpYXQiOjE3NzUwMDIyMDAsIm5iZiI6MTc3NTAwMjIwMCwiZXhwIjoxNzc1MDAyNTAwLCJkZXZpY2VfaWQiOiJkZXZpY2UtMSIsIm1hbmlmZXN0X2lkIjoibWFuLTIwMjYtMDQtMDEtMDAxIiwicG9saWN5X2Vwb2NoIjo3LCJjb3JlX3ZlcnNpb25zIjpbMV0sImNhcnJpZXJfcHJvZmlsZXMiOlsiY2Fycmllci1wcmltYXJ5Il0sImNhcGFiaWxpdGllcyI6WzEsMl0sInNlc3Npb25fbW9kZXMiOlsidGNwIl0sInJlZ2lvbl9zY29wZSI6ImV1LWNlbnRyYWwiLCJ0b2tlbl9tYXhfcmVsYXlfc3RyZWFtcyI6OCwidG9rZW5fbWF4X3VkcF9mbG93cyI6NCwidG9rZW5fbWF4X3VkcF9wYXlsb2FkIjoxMjAwfQ.mHXJ6XpB_jKdGA7SlR_SqVVqG0QthD8uTHwOCls7OFG5PUN-OUgnPl3Jzk15ElE_wFOVxHU6_ixrDGzMN3VJBQ